Revise Rose Day message and update title
Updated the content of the Rose Day message and changed the title.

--- a/new.html
+++ b/new.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>untoldcoding</title>
+    <title>Rose day</title>
     <link rel="stylesheet" href="new.css" />
   </head>
   <body>
@@ -13,34 +13,32 @@
       <div class="postcard">
         <div class="letter"></div>
         <p>
-          <span>My Love,</span>
+          <span>My Riya ,</span>
           <br />
-          On this Rose Day, each petal symbolizes my admiration <br />for you.
-          Your presence colors my world with joy and warmth.Like a rose in full
-          bloom, your beauty captivates my heart. The red roses reflect the
-          passion that burns for you, while the white ones signify the purity of
-          our love. In the garden of life, you're my most cherished blossom.
-          Thank you for being my source of love and inspiration. Our journey
-          together is as sweet as the fragrance of roses. Happy Rose Day, my
-          love. Here's to many more petals of shared laughter and enduring love.
+          Happy Rose Day to the rose of my life. Even if I have to prick my hands on thorns, I will still hold my rose. 
+          If I am a house, you are the garden that makes it beautiful. To me, even your fart smells like a rose. 
+          Your smile makes me bloom, and you fill my life with colors.
+          Like every color of a rose, you have filled my life with every beautiful emotion. 
+          Your presence fills my world with love and care. 
+          Thank you for being the fragrance of my life and the source of my admiration and inspiration. 
+          Maybe I’m hard to handle, but take me as “tedha hai par mera hai.” 
+          I will improve myself at every stage and always strive to be a better man for you. 
+          I will hold you delicately like a flower and nourish you with love so you never wither. 
+          Cheers to many more Rose Days that we will share in our lives. 
+          P.S. I don’t know why I added the fart line — it’s just that I love everything about you.
           <br />
           <span class="ullu">
             Forever Yours,
+            Gyan
             <br />
             Ullu</span
           >
         </p>
-        <div class="address">
-          <img
-            src="https://i.postimg.cc/9Xq7XyF2/Untold-Coding.png"
-            class="mail_stamp"
-          />
-        </div>
-      </div>
-    </div>
+        
 
     <footer>
-      <p>crafted by @untoldcoding.</p>
+      
     </footer>
   </body>
 </html>
+
