Revise Rose Day message and header
Updated the message content and changed the header from 'For You' to 'Bebe'.

--- a/new.html
+++ b/new.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="wrap">
-      <h1>For You 💖</h1>
+      <h1>Bebe 💖</h1>
       <div class="postcard1"></div>
       <div class="postcard">
         <div class="letter"></div>
@@ -25,14 +25,13 @@
           I will improve myself at every stage and always strive to be a better man for you. 
           I will hold you delicately like a flower and nourish you with love so you never wither. 
           Cheers to many more Rose Days that we will share in our lives. 
-          P.S. I don’t know why I added the fart line — it’s just that I love everything about you.
+          P.S. I don’t know why I added the fart line — it’s just that I love everything about you😂.
           <br />
           <span class="ullu">
             Forever Yours,
             Gyan
             <br />
-            Ullu</span
-          >
+            
         </p>
         
 
@@ -41,4 +40,5 @@
     </footer>
   </body>
 </html>
+
 
